--- a/public/vishwakarma.html
+++ b/public/vishwakarma.html
@@ -272,11 +272,11 @@
 
             <div class="col-xs-12 form-group" ng-show="login_mode == 'login'">
                 <div class="form-group">
-                    <input type="text" placeholder="Username" class="form-control">
+                    <input type="text" placeholder="Username" class="form-control" ng-model="username">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
+                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
                 </div>
 
             </div>
@@ -287,7 +287,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" ng-show="login_mode == 'register'" ng-disabled="!validate_registration()" ng-click="register()">Sign Up</button>
-        <button type="button" class="btn btn-primary" ng-show="login_mode == 'login'">Sign In</button>
+        <button type="button" class="btn btn-primary" ng-show="login_mode == 'login'" ng-click="login()">Sign In</button>
       </div>
     </div>
   </div>
